force-app/src/objects/c2g__ReminderRule__c.object
<CustomObject>
    <description>Custom object used to manage the rules that identify sales invoices that are due to be sent a reminder email.</description>
    <fields>
        <fullName>c2g__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the reminder rule is included in the collections process.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the reminder rule has been scheduled to send reminders automatically.</description>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Reminder Rules</relationshipLabel>
        <relationshipName>ReminderRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__EmailTemplateID__c</fullName>
        <inlineHelpText>Enter an Email Template ID. The ID specifies the email template used for this reminder rule.</inlineHelpText>
        <label>Email Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__MaximumInvoiceAgeForReminders__c</fullName>
        <defaultValue>365</defaultValue>
        <inlineHelpText>This determines the maximum age, in days from the due date, of invoices retrieved for sending reminders. The default is 365. You can try reducing this value if you receive errors retrieving invoices for this reminder rule.</inlineHelpText>
        <label>Maximum Invoice Age For Reminders (Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PreferredStartTime__c</fullName>
        <label>Preferred Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>c2g__ReferenceDateField__c</fullName>
        <label>Reference Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ScheduledJobId__c</fullName>
        <label>Scheduled Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SenderEmail__c</fullName>
        <label>Sender Email</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Severity__c</fullName>
        <label>Severity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TimeTriggerDays__c</fullName>
        <inlineHelpText>Type number of days before or after Due Date. Type a minus symbol (-) before the number  of days to send the reminder before the Due Date, type 0 to send the reminder on the Due Date, or type the number of days to send the reminder after the Due Date.</inlineHelpText>
        <label>Days before or after Due Date</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UseCongaAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the reminders use conga templates for attachments in email.</description>
        <label>Use Conga Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__UseExistingCongaAttachments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the reminders use existing Conga attachments in email.</description>
        <inlineHelpText>Select this to use existing Conga attachments to invoices when sending reminder emails.</inlineHelpText>
        <label>Use Existing Conga Attachments</label>
        <type>Checkbox</type>
    </fields>
    <label>Reminder Rule</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Active__c</columns>
        <columns>c2g__Company__c</columns>
        <columns>c2g__TimeTriggerDays__c</columns>
        <columns>c2g__UseCongaAttachments__c</columns>
        <columns>c2g__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reminder Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>